--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1455,7 +1455,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Gây Choáng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -1474,7 +1474,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Tê Liệt",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -1493,7 +1493,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Gây Độc",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -1512,7 +1512,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Làm Chậm",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -1531,7 +1531,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Câm Lặng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -1550,7 +1550,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Chống Choáng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -1569,7 +1569,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Chống Tê Liệt",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -1588,7 +1588,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Chống Độc",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -1607,7 +1607,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Chống Làm Chậm",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -1626,7 +1626,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Ngọc Chống Câm Lặng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -2177,7 +2177,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đệ Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3374,7 +3374,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn chuẩn bị mua {0} với {1} vàng. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5388,7 +5388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dùng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5711,7 +5711,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dùng điểm thiên phú của tinh linh sẽ tẩy tủy một điểm tư chất bất kỳ. Sẽ tốn {0} Điểm Thiên Phú. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6053,7 +6053,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mua K.Nghiệm sẽ cho bạn {1}% K.Nghiệm ở cấp hiện tại của bạn. Mỗi ngày chỉ được một lần và sẽ tốn {0} Vàng.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7079,7 +7079,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giúp Kuroom và những tùy tùng để đem hàng hóa đến lãnh thố mới khai hoang của hắn.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7174,7 +7174,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đặt Đội Trưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7725,7 +7725,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Yêu cầu có {0} viên ngọc cùng loại để có thể dung hợp lên cấp tiếp theo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7744,7 +7744,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dung hợp ngọc sẽ tốn {0} Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9473,7 +9473,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Tướng Cướp",
         "ar": "",
         "it": "",
         "pl": "",
@@ -9511,7 +9511,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Đức Hạnh",
         "ar": "",
         "it": "",
         "pl": "",
@@ -9530,7 +9530,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Bất Hạnh",
         "ar": "",
         "it": "",
         "pl": "",
@@ -9549,7 +9549,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Tinh Linh",
         "ar": "",
         "it": "",
         "pl": "",
@@ -9568,7 +9568,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Tận Thế",
         "ar": "",
         "it": "",
         "pl": "",
@@ -9587,7 +9587,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Shalim",
         "ar": "",
         "it": "",
         "pl": "",
@@ -9834,7 +9834,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tổ Đội Vận Chuyển Hắc Ám",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9986,7 +9986,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dịch Chuyển",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10005,7 +10005,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hiện tuyến đường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10024,7 +10024,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Số lần Vận Chuyện Hắc Ám còn lại hôm nay: ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10043,7 +10043,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Số lần Cướp Chính Đáng còn lại hôm nay: ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10670,7 +10670,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bùa Mắt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10689,7 +10689,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bùa Tay",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10708,7 +10708,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bùa Đầu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10727,7 +10727,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bùa Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10746,7 +10746,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bùa Linh Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10765,7 +10765,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đôi Mắt Kinh Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10784,7 +10784,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đôi Tay Kinh Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10803,7 +10803,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cái Đầu Kinh Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10822,7 +10822,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tinh Linh Kinh Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10841,7 +10841,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Linh Hồn Kinh Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10860,7 +10860,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đôi Mắt Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10879,7 +10879,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đôi Tay Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10898,7 +10898,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cái Đầu Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10917,7 +10917,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tinh Linh Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10936,7 +10936,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Linh Hồn Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10955,7 +10955,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lời Nhắn Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10974,7 +10974,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đấu Sĩ Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10993,7 +10993,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bất Phương Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11012,7 +11012,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bậc Thầy Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11031,7 +11031,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bất Phương Kinh Hãi Quân Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
