--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3261,7 +3261,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phi Cơ Đỏ Đỉnh Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3280,7 +3280,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phi Cơ Cam Đỉnh Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3299,7 +3299,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phi Cơ Tìm Đỉnh Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3318,7 +3318,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Diều Lam Đỉnh Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3337,7 +3337,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Diều Cam Đỉnh Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3356,7 +3356,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Diều Trắng Đỉnh Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3375,7 +3375,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mây Pháp Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3394,7 +3394,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mây Cung Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3413,7 +3413,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mây Kiếm Sĩ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3432,7 +3432,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phượng Hoàng Pháp Sư Đỉnh Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3451,7 +3451,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phượng Hoàng Cung Thủ Đỉnh Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3459,7 +3459,7 @@
         "id":""
     },
     "item.1236.name":{
-        "en":"Advanced Mage Phoenix",
+        "en":"Advanced Warrior Phoenix",
         "fr":"Phoenix Avancé de Guerrier",
         "es":"",
         "zh-cn":"",
@@ -3470,7 +3470,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phượng Hoàng Kiếm Sĩ Đỉnh Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3490,7 +3490,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạch Cốt Long Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3509,7 +3509,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hắc Cốt Long Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3528,7 +3528,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phi Cơ Đỏ Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3547,7 +3547,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phi Cơ Cam Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3566,7 +3566,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phi Cơ Tím Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3585,7 +3585,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Diều Lam Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3604,7 +3604,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Diều Cam Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3623,7 +3623,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Diều Cam Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3642,7 +3642,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mây Pháp Sư Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3661,7 +3661,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mây Cung Thủ Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3680,7 +3680,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mây Kiếm Sĩ Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3699,7 +3699,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phượng Hoàng Pháp Sư Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3718,7 +3718,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phượng Hoàng Cung Thủ Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3726,7 +3726,7 @@
         "id":""
     },
     "item.1249.name":{
-        "en":"Glittery Mage Phoenix",
+        "en":"Glittery Warrior Phoenix",
         "fr":"Phoenix Avancé de Guerrier Scintillant",
         "es":"",
         "zh-cn":"",
@@ -3737,7 +3737,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phượng Hoàng Kiếm Sĩ Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3756,7 +3756,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thảm Pháp Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3775,7 +3775,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thảm Cung Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3794,7 +3794,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thảm Cung Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13683,7 +13683,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Goku (Đen)",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13702,7 +13702,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Pegasus Đen",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13721,7 +13721,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Pegasus Đen Phát Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13740,7 +13740,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Cưới Đỏ Đen",
         "ar":"",
         "it":"",
         "pl":"",
@@ -15374,7 +15374,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Goku (Hồng)",
         "ar":"",
         "it":"",
         "pl":"",
@@ -15393,7 +15393,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chun li (Grenadine)",
         "ar":"",
         "it":"",
         "pl":"",
@@ -15431,7 +15431,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Pegasus Xám",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22739,7 +22739,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bằng Chứng Tương Trợ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -29987,7 +29987,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hồ Điệp Đỏ - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -30006,7 +30006,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hồ Điệp Đỏ Phát Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -32669,7 +32669,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên Liệu Trang Bị Cấp 100. Cũng có thể được tìm thấy bên trong công hội",
         "ar":"",
         "it":"",
         "pl":"",
