--- a/Translation/map.json
+++ b/Translation/map.json
@@ -486,7 +486,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bên Ngoài Nghĩa Trang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -505,7 +505,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đường Tới Nghĩa Trang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -524,7 +524,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sân Nghĩa Trang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -543,7 +543,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộ Quân Hoàng Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -562,7 +562,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộ Quân Hoàng Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -581,7 +581,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộ Quân Hoàng Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -600,7 +600,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộ Quân Hoàng Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -619,7 +619,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộ Quân Hoàng - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -638,7 +638,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộ Quân Hoàng - Thâm Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -657,7 +657,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thử Nghiệm Quân Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2177,7 +2177,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đường Mòn Lạnh Lẽo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2196,7 +2196,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lãnh Nguyên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2234,7 +2234,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tòa Nhà Băng Giá",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2253,7 +2253,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tòa Nhà Băng Giá Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2272,7 +2272,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tòa Nhà Băng Giá Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2291,7 +2291,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tòa Nhà Băng Giá Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2310,7 +2310,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tòa Nhà Băng Giá Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2329,7 +2329,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tòa Nhà Băng Giá Tầng 5",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2348,7 +2348,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tòa Nhà Băng Giá - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2367,7 +2367,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bãi Mảnh Băng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2386,7 +2386,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cảng Mảnh Băng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2405,7 +2405,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hồ Gương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2424,7 +2424,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vùng Đất Bắc Âu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2443,7 +2443,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngôi Làng Hẻo Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2462,7 +2462,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hang Tại Ngôi Làng Hẻo Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2481,7 +2481,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rừng Tuyết",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2538,7 +2538,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rừng Rậm Hoang Cổ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2557,7 +2557,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Biên Giới",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2576,7 +2576,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cảng Dabura",
         "ar":"",
         "it":"",
         "pl":"",
