--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -296,7 +296,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ổ Chứa Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -315,7 +315,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ổ Chứa Xanh Lam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ổ Chứa Cam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -353,7 +353,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tương ứng với ổ chứa Đỏ hoặc Cam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -372,7 +372,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tương ứng với ổ chứa Xanh Lam hoặc Cam",
         "ar":"",
         "it":"",
         "pl":"",
