--- a/Translation/event.json
+++ b/Translation/event.json
@@ -608,10 +608,10 @@
         "id":""
     },
     "event.BATTLEFIELD.title":{
-        "en":"Battlefield",
-        "fr":"Champ de bataille",
+        "en":"Battlefield 7v7",
+        "fr":"Champ de bataille 7v7",
         "es":"",
-        "zh-cn":"战场",
+        "zh-cn":"战场 7v7",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -619,7 +619,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chiến Trường",
+        "vi":"Chiến Trường 7v7",
         "ar":"",
         "it":"",
         "pl":"",
@@ -644,25 +644,6 @@
         "pl":"",
         "th":"",
         "id":""
-    },
-    "event.BATTLEFIELD.description-2":{
-        "en":"Time (Server): 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
-        "fr":"Horaires(Serveur): 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
-        "es":"Horarios(Serveur): 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
-        "zh-cn":"时间(服务器) : 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
-        "zh-tw":"",
-        "kr":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "ru":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "tr":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "de":"Zeiten: 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "jp":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "pt":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "vi":"Thời Gian (VN): 5:30-6:00 9:30-10:00<br>13:30-14:00 17:30-18:00<br>21:30-22:00 1:30-2:00",
-        "ar":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "it":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "pl":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "th":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "id":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)"
     },
     "event.BATTLEFIELD.score.team-ally":{
         "en":"Ally",
@@ -848,6 +829,44 @@
         "jp":"",
         "pt":"",
         "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD_SMALL.title":{
+        "en":"Battlefield 3v3",
+        "fr":"Champ de bataille 3v3",
+        "es":"",
+        "zh-cn":"战场 3v3",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Chiến Trường 3v3",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD_SMALL.description-1":{
+        "en":"EXP, Token",
+        "fr":"EXP, Jeton",
+        "es":"",
+        "zh-cn":"经验, 代币",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Kinh Nghiệm, Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
